2022-12-05  Alex Kotov  <kotovalexarian@gmail.com>

	libkernaux 0.6.1 released