@@ -51,10 +51,17 @@ extern "C" {
  *********************/
 
 #define KERNAUX_STATIC_TEST_STRUCT_SIZE(name, size) \
-__attribute__((unused))                             \
+KERNAUX_UNUSED                                      \
 static const int                                    \
 _kernaux_static_test_struct_size_##name[            \
     sizeof(struct name) == (size) ? 1 : -1          \
+]
+
+#define KERNAUX_STATIC_TEST_UNION_SIZE(name, size)  \
+KERNAUX_UNUSED                                      \
+static const int                                    \
+_kernaux_static_test_union_size_##name[             \
+    sizeof(union name) == (size) ? 1 : -1           \
 ]
 
 /*****************
