@@ -1,3 +1,7 @@
+2022-12-08  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* include/kernaux/*.h: Definition "KERNAUX_BITFIELDS" has been added
+
 2022-12-05  Alex Kotov  <kotovalexarian@gmail.com>
 
 	libkernaux 0.6.1 released
